--- a/GWFish/detectors.yaml
+++ b/GWFish/detectors.yaml
@@ -1,15 +1,15 @@
 ET:
-            lat:              (43 + 37. / 60) * np.pi / 180.
-            lon:              (10 + 30. / 60) * np.pi / 180.
+            lat:              (43 + 37. / 60 + 53.0921 / 3600) * np.pi / 180.
+            lon:              (10 + 30. / 60 + 16.1878 / 3600) * np.pi / 180.
             opening_angle:    np.pi / 3.
             azimuth:          70.5674 * np.pi / 180.
-            psd_data:         GWFish/detector_psd/ET_psd.txt
+            psd_data:         GWFish/detector_psd/ET_D_psd.txt
             duty_factor:      0.85
             detector_class:   earthDelta
             plotrange:        3, 3000, 1e-25, 1e-20
-            fmin:             2.
+            fmin:             10.
             fmax:             1024.
-            df:               1./16.                 
+            df:               1./127.                 
 VOY:
             lat:              46.5 * np.pi / 180.
             lon:              -119.4 * np.pi / 180.
