chore: fix pip installation with pyptoject.toml
including all python files in the modules folder manually seems to be necessary.
Also, including new required dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "GWFish"
 version = "0.1.0"
 description = "A Fisher Matrix code for third-generation gravitational wave detectors."
 authors = ["Jan Harms <jan.harms@gssi.it>"]
+packages = [
+    { include = "GWFish" },
+    { include = "GWFish/**/*.py" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.8, <3.11"
@@ -12,6 +16,12 @@ pandas = "^1.4.1"
 astropy = "^5.0.1"
 scipy = "^1.8.0"
 matplotlib = "^3.5.1"
+tqdm = "^4.64.0"
+sympy = "^1.10.1"
+lalsuite = {version = "^7.5", optional = true}
+
+[tool.poetry.extras]
+waveforms = ["lalsuite"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
