--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,13 @@ waveforms = ["lalsuite"]
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
 tox = "^3.24.5"
+ipython = "^8.4.0"
+furo = "^2022.6.21"
+myst-parser = "^0.18.0"
+sphinx-copybutton = "^0.5.0"
+readthedocs-sphinx-search = "^0.1.2"
+sphinxcontrib-bibtex = "^2.4.2"
+sphinx-toolbox = "^3.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
