--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ tqdm = "^4.64.0"
 sympy = "^1.10.1"
 
 [tool.poetry.group.waveforms.dependencies]
-lalsuite = "^7.5"
+lalsuite = ">=7.8"
 
 [tool.poetry.group.docs]
 optional = true
