--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,15 @@ readthedocs-sphinx-search = "^0.1.2"
 sphinxcontrib-bibtex = "^2.4.2"
 sphinx-toolbox = "^3.1.2"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.0.1"
+tox = "^3.24.5"
+ipython = "^8.4.0"
+pytest-sugar = "^0.9.6"
+healpy = "^1.16.2"
+pycbc = "^2.2.0"
+hypothesis = "^6.75.2"
+
 [tool.poetry.extras]
 waveforms = ["lalsuite"]
 docs = ["furo", 
@@ -42,13 +51,6 @@ docs = ["furo",
         "sphinxcontrib-bibtex", 
         "sphinx-toolbox"
 ]
-
-
-[tool.poetry.dev-dependencies]
-pytest = "^7.0.1"
-tox = "^3.24.5"
-ipython = "^8.4.0"
-pytest-sugar = "^0.9.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
