add pytest-profiling package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ healpy = "^1.16.2"
 pycbc = "^2.2.0"
 hypothesis = "^6.75.2"
 pytest-mock = "^3.11.1"
+pytest-profiling = "^1.7.0"
 
 [tool.poetry.extras]
 waveforms = ["lalsuite"]
