--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,23 +5,23 @@ on:
 
 jobs:
   ci:
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-        os: [ubuntu-22.04, macos-latest, windows-latest]
 
-      steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .
-      - name: Test with pytest
-        run: |
-          pip install pytest pytest-sugar hypothesis pytest-mock pytest-profiling
-          pytest 
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install .
+    - name: Test with pytest
+      run: |
+        pip install pytest pytest-sugar hypothesis pytest-mock pytest-profiling
+        pytest 
