--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8, <3.11"
+python = ">=3.9, <3.12"
 numpy = "^1.22.2"
 tables = "^3.7.0"
 pandas = "^1.4.1"
@@ -44,6 +44,8 @@ pycbc = "^2.2.0"
 hypothesis = "^6.75.2"
 pytest-mock = "^3.11.1"
 pytest-profiling = "^1.7.0"
+jupyter = "^1.0.0"
+corner = "^2.2.2"
 
 [tool.poetry.extras]
 waveforms = ["lalsuite"]
