set lalsuite as an extra for installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,7 @@ scipy = "^1.8.0"
 matplotlib = "^3.5.1"
 tqdm = "^4.64.0"
 sympy = "^1.10.1"
-
-[tool.poetry.group.waveforms.dependencies]
-lalsuite = ">=7.8"
+lalsuite = {version=">=7.8", optional=true}
 
 [tool.poetry.group.docs]
 optional = true
