--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
+        pip install .[waveforms]
     - name: Test with pytest
       run: |
         pip install pytest pytest-sugar hypothesis pytest-mock pytest-profiling
