--- a/GWFish/detectors.yaml
+++ b/GWFish/detectors.yaml
@@ -12,6 +12,8 @@ ET:
             spacing:          geometric
             df:               1./16.
             npoints:          1000
+            arm_length:       10000.
+            
 VOY:
             lat:              46.5 * np.pi / 180.
             lon:              -119.4 * np.pi / 180.
