--- a/GWFish/detectors.yaml
+++ b/GWFish/detectors.yaml
@@ -26,12 +26,12 @@ VOY:
         spacing:          geometric 
         df:               1./4.    
         npoints:          5000           
-CE1:
+CE40:
         lat:              46.5 * np.pi / 180.
         lon:              -119.4 * np.pi / 180.
         opening_angle:    np.pi / 2.
         azimuth:          126. * np.pi / 180.
-        psd_data:         CE1_psd.txt
+        psd_data:         CE40_psd.txt
         duty_factor:      0.85
         detector_class:   earthL
         plotrange:        10, 1000, 1e-25, 1e-20
@@ -40,12 +40,12 @@ CE1:
         spacing:          geometric 
         df:               1./4.    
         npoints:          5000 
-CE2:
-        lat:              46.5 * np.pi / 180.
-        lon:              -119.4 * np.pi / 180.
+CE20:
+        lat:              (-25. + 30./60.) * np.pi / 180.
+        lon:              (152. + 4./60.) * np.pi / 180.
         opening_angle:    np.pi / 2.
         azimuth:          126. * np.pi / 180.
-        psd_data:         CE2_psd.txt
+        psd_data:         CE20_psd.txt
         duty_factor:      0.85
         detector_class:   earthL
         plotrange:        10, 1000, 1e-25, 1e-20
