Modified SNR function names
removed if statement from get_snr function (reverted to previous functionality)

renamed get_SNR_from_strains to get_SNR_from_series

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,8 @@ dist/
 .hypothesis/*
 docs/source/detectors_autogen.inc
 docs/source/figures/*
-23_gwstrain_trim.dat
+*_gwstrain_trim.dat
+Merger_data.ipynb
+spectrum_data.hdf5
+*eatmap*
+
