wrong path to psds

--- a/GWFish/paper_yamls/paper_yaml_10Hz.yaml
+++ b/GWFish/paper_yamls/paper_yaml_10Hz.yaml
@@ -3,7 +3,7 @@ myET:
         lon:              10.5 * np.pi / 180.
         opening_angle:    np.pi / 3.
         azimuth:          70.5674 * np.pi / 180.
-        psd_data:         /Users/ulyana/Documents/GWFish/GWFish/detector_psd/ET_psd.txt
+        psd_data:         ET_psd.txt
         duty_factor:      0.85
         detector_class:   earthDelta
         plotrange:        3, 1000, 1e-25, 1e-20
