--- a/GWFish/detectors.yaml
+++ b/GWFish/detectors.yaml
@@ -123,7 +123,7 @@ KAG:
         lon:              137.3 * np.pi / 180.
         opening_angle:    np.pi / 2.
         azimuth:          29.6 * np.pi / 180.
-        psd_data:         Kagra_128Mpc_psd.txt
+        psd_data:         kagra_128Mpc_psd.txt
         duty_factor:      0.85
         detector_class:   earthL
         plotrange:        10, 1000, 1e-25, 1e-20
